force-app/main/default/objects/Community_Error_Log__c/Community_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Community Error Log</label>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Community Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>