force-app/main/default/objects/Community_Error_Log__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Name of the triggering component</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>