force-app/main/default/objects/Community_Error_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the API call success or fail</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>