force-app/main/default/objects/Community_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Component_Name__c</columns>
    <columns>Method__c</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>